--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/betorobson/git-test#readme",
   "devDependencies": {
-    "angular": "^1.6.2",
-    "angular-route": "^1.6.2"
+    "angular": "^1.6.2"
   }
 }
