--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "angular": "^1.6.2",
     "angular-route": "^1.6.2",
+    "jquery": "^3.1.1",
     "shared-git-hooks": "^1.2.1"
   }
 }
