--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "devDependencies": {
     "angular": "^1.6.2",
     "angular-route": "^1.6.2",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1"
+    "gulp": "^3.9.1"
   }
 }
