--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "angular": "^1.6.2",
     "angular-route": "^1.6.2",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-order": "^1.1.1"
   }
 }
